welcome.lessons.welcome.summative.Moria.scala.code
def trouverSortie () 
{
  while (!(estFaceMur() && !estSurBiscuit()))
  {
    setDirection(est)
    while(!estSurBiscuit()) 
    {
      avance()
    }
    if (estSurBiscuit()) 
    {
      prendBiscuit()
      while(!estSurBiscuit()) 
      {
        recule()
      }
      avance()
      poseBiscuit()
      avance()
    }
  }
  droite()
  avance()
  gauche()
  avance()
}